[package]
name = "beanstalkr"
version = "0.1.0"
authors = ["YahanLin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
strum = "0.17.1"
strum_macros = "0.17.1"
failure = "0.1.6"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
async-stream = "0.2.0"
log = "0.4"
pretty_env_logger = "0.3"
env_logger = "0.7.1"
downcast-rs = "1.1.1"
min-max-heap = "1.3.0"
async-trait = "0.1.22"
lazy_static = "1.4.0"
futures = "0.3.1"
futures-timer = "2.0.2"
fasthash = "0.4"
beanstalkc = "^0.2.0"
ctrlc = { version = "3.0", features = ["termination"] }
serde = "1.0"
serde_yaml = "0.8"
pprof = { version = "0.3", features = ["flamegraph"] }
[dependencies.async-std]
version = "1.4.0"
features = ["unstable"]
