[package]
name = "beanstalkr"
version = "0.1.0"
authors = ["YahanLin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
strum = "0.25.0"
strum_macros = "0.25.1"
failure = "0.1.8"
chrono = { version = "0.4.26", features = ["serde", "rustc-serialize"] }
uuid = { version = "1.4.0", features = ["serde", "v4"] }
async-stream = "0.3.5"
log = "0.4.19"
pretty_env_logger = "0.5.0"
env_logger = "0.10.0"
downcast-rs = "1.2.0"
min-max-heap = "1.3.0"
async-trait = "0.1.69"
lazy_static = "1.4.0"
futures = "0.3.28"
futures-timer = "3.0.2"
ctrlc = { version = "3.4.0", features = ["termination"] }
serde = "1.0.166"
serde_yaml = "0.9.22"

[dev-dependencies]
beanstalkc = "1.0.0"

[dependencies.async-std]
version = "1.12.0"
features = ["unstable"]

[profile.release]
debug = true
